<!--

This is a minimal configuration for a JavaFX 8 maven project.

For more information please access fxapps.blogspot.com

by: William Siqueira
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jugvale</groupId>
  <artifactId>jfx8-app</artifactId>
  <version>1.2.0-SNAPSHOT</version>

  <properties>
    <jar.final.name>jfx8-app</jar.final.name>
    <main.class>cl.transbank.possdk.example.App</main.class>
    <java.version>11</java.version>
    <javafx.version>17.0.8</javafx.version>
    <javafx.platform>mac-aarch64</javafx.platform>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.transbankdevelopers</groupId>
      <artifactId>transbank-sdk-pos-java</artifactId>
      <version>3.1.2-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
  </dependencies>

  <build>
    <finalName>${jar.final.name}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>${main.class}</mainClass>
          <options>
            <option>--add-modules=javafx.controls,javafx.fxml</option>
          </options>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>${main.class}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>${main.class}</mainClass>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>mac-aarch64</id>
      <activation>
        <os>
          <name>Mac OS X</name>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <javafx.platform>mac-aarch64</javafx.platform>
      </properties>
    </profile>

    <profile>
      <id>mac-x86_64</id>
      <activation>
        <os>
          <name>Mac OS X</name>
          <arch>x86_64</arch>
        </os>
      </activation>
      <properties>
        <javafx.platform>mac</javafx.platform>
      </properties>
    </profile>

    <profile>
      <id>linux-x86_64</id>
      <activation>
        <os>
          <name>Linux</name>
          <arch>x86_64</arch>
        </os>
      </activation>
      <properties>
        <javafx.platform>linux</javafx.platform>
      </properties>
    </profile>

    <profile>
      <id>windows-x86_64</id>
      <activation>
        <os>
          <name>Windows</name>
          <arch>x86_64</arch>
        </os>
      </activation>
      <properties>
        <javafx.platform>win</javafx.platform>
      </properties>
    </profile>
  </profiles>
</project>
